fix: bottom display div collapsing when empty

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ body {
   font-size: 5em;
   font-weight: 300;
   line-height: 0.75em;
+  min-height: 80%;
 }
 
 hr {
